--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -4,7 +4,7 @@
   height: 50px;
   letter-spacing: 0.5px;
   line-height: 50px;
-  padding: 0 35px 0 35px;
+  padding: 0;
   font-size: 15px;
   background-color: black;
   color: white;
@@ -25,6 +25,7 @@
   &.google-sign-in{
     background-color: #4285f4;
     color: white;
+    font-size: 12px;
 
     &:hover{
       background-color: #357ae8;
